--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
     justify-content: space-around;
     min-height: 100vh;
     margin: 0;
-    font-size: 20px;
+    font-size: 1rem;
 }
 
 header {
@@ -86,9 +86,10 @@ footer>h4 {
     line-height: 0.8;
     margin: 5px;
 }
-footer>p {
+footer p {
     font-style:italic;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 
@@ -121,7 +122,7 @@ footer>p {
     border: 1px solid blue;
 }
 
-.popup-form>button {
+.popup-form button {
     padding: 5px;
     border-radius: 5px;
     font: inherit;
@@ -129,21 +130,23 @@ footer>p {
     color: inherit;
 }
 
-.popup-form input::placeholder,
-textarea::placeholder {
-  font-family: inherit !important; 
-  opacity: 0.7;
+.popup-form input,
+.popup-form textarea {
+  font-family: "Delius Swash Caps", cursive !important;
   color: inherit;
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(0.3);
+  cursor: pointer;
+}
+
 .single-project {
-    display: flex;
-    align-items: center;
     border: 1px solid rgb(133, 191, 206);
-    background-color: rgb(221, 248, 255);
-    color: rgb(63, 63, 63);
+    background-color: rgb(10, 115, 141);
+    color: rgb(239, 247, 255);
     margin: 8px 0;
-    padding: 12px 16px;
+    padding: 8px 10px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(61,117,131,0.12), 0 1.5px 0 #b2ebf2 inset;
     cursor: grab;
@@ -151,7 +154,7 @@ textarea::placeholder {
     font-weight: 500;
     user-select: none;
     position: relative;
-    max-height: 28px;
+    position: relative;
 }
 
 .single-project:active {
@@ -160,16 +163,16 @@ textarea::placeholder {
     cursor: grabbing;
 }
 
-.single-project:hover {
+.single-project:hover:not(:has(:hover)){
     box-shadow: 0 6px 18px rgba(61,117,131,0.19), 0 2px 0 #b2ebf2 inset;
-    background-color: #b2ebf2;
+    background-color: rgb(19, 149, 182);
 }
 
 .single-item {
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr 1fr;
     border: 1px solid rgb(170, 142, 105);
-    background-color: rgb(255, 253, 250);
+    background-color: rgb(253, 255, 224);
     color: rgb(63, 63, 63);
     margin: 8px 0;
     padding: 12px 16px;
@@ -180,16 +183,146 @@ textarea::placeholder {
     font-weight: 500;
     user-select: none;
     position: relative;
-    max-height: 30px;
+    max-height: 35px;
+    position: relative;
 }
 
-.single-item:active {
+/* .single-item:active:not(:has(:active)) {
     box-shadow: 0 2px 4px rgba(61,117,131,0.16) inset;
     transform: translateY(2px) scale(0.98);
     cursor: grabbing;
-}
+} */
 
 .single-item:hover {
     box-shadow: 0 6px 18px rgba(61,117,131,0.19), 0 2px 0 #ffee8e inset;
     background-color: #faf6c5;
+}
+.proj-date {
+    font-size: 12px;
+    margin: 3px;
+}
+.proj-name {
+    font-size: 18px;
+    margin: 3px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 50px;
+}
+
+.edit-project {
+    background-image: url(./asset/file-edit-outline.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 1rem;
+    background-color: inherit;
+    filter: invert(1) brightness(2);
+    border: none;
+    opacity: 0.7;
+    cursor: pointer; 
+    transition: opacity 0.2s ease;
+}
+
+.delete-project {
+    background-image: url(./asset/trash-can-outline.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 1rem;
+    background-color: inherit;
+    filter: invert(1) brightness(8);
+    border: none;
+    opacity: 0.7;
+    cursor: pointer; 
+    transition: opacity 0.2s ease;
+}
+
+
+button:hover {
+    transform: translateY(-2px) scale(1.2);
+    opacity: 1;
+}
+.icon-project {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.edit-item {
+    background-image: url(./asset/file-edit-outline.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 1rem;
+    background-color: #ffffff;
+    border: none;
+    opacity: 0.7;
+    cursor: pointer; 
+    transition: opacity 0.2s ease;
+}
+
+.delete-item {
+    background-image: url(./asset/trash-can-outline.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 1rem;
+    background-color: #ffffff;
+    border: none;
+    opacity: 0.7;
+    cursor: pointer; 
+    transition: opacity 0.2s ease;
+}
+
+.icon-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+input[type="checkbox"] {
+  cursor: pointer;
+  transform: scale(1.5);
+  margin-left: 20px;
+}
+
+input[type="checkbox"]:hover {
+    background-color: #e1f5fe;
+    transform: translateY(-2px) scale(1.8);
+    opacity: 1;
+}
+.done {
+    text-decoration: line-through;
+    opacity: 0.6;
+    background-color: rgb(145, 252, 145);
+}
+
+.single-project.dragging,
+.single-item.dragging {
+    opacity: 0.5;
+    border: 2px dashed #007bff; /* Optional visual effect */
+    cursor: grabbing;
+}
+
+.single-project,
+.single-item {
+    cursor: grab;
+    user-select: none;
 }
